# APITranslator

./: .gitignore  README.md  pyproject.toml  setup.py
ApiTranslator/: __init__.py  config.py
src/ApiTranslator/: DeepLTranslator.py  Exceptions.py  __init__.py  _deepLTranslator.py
tests/: test_my_functions.py  test_translation_with_deepL.py
