[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ApiTranslator"
version = "0.0.1"
authors = [
  { name="Thomas SOUTIF" },
]
description = "A library to translate text from different modules."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
