[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ApiTranslator"
version = "0.0.2"
authors = [
  { name="Thomas SOUTIF" },
]
description = "A library to translate text from different modules."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.poetry]
name = "APITranslator"
version = "0.1.0"
description = ""
authors = ["Thomas SOUTIF"]
readme = "README.md"
packages = [{include = "ApiTranslator"}]

[tool.poetry.dependencies]
python = "^3.9"
deepl = "^1.11.0"
python-dotenv = "^0.21.0"
hatchling = "^1.10.0"
pytest = "^7.1.3"
build = "^0.8.0"
